<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/search"
		  android:title="What are you looking for?"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    
    <item android:id="@+id/new_post_button"
		  android:title="Post"
          android:showAsAction="collapseActionView|ifRoom"
          />
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_food"
          android:title="@string/action_food"
          android:showAsAction="never" />
    <item android:id="@+id/action_alerts"
          android:title="@string/action_alerts"
          android:showAsAction="never" />
    <item android:id="@+id/action_sports"
          android:title="@string/action_sports"
          android:showAsAction="never" />
    <item android:id="@+id/action_music"
          android:title="@string/action_music"
          android:showAsAction="never" />
    <item android:id="@+id/action_culture"
          android:title="@string/action_culture"
          android:showAsAction="never" />
    <item android:id="@+id/action_offers"
          android:title="@string/action_offers"
          android:showAsAction="never" />
    <item android:id="@+id/action_username"
          android:title="@string/action_username"
          android:showAsAction="never" />
    
</menu>